feat: first real version

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,6 +4,16 @@ python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
 addopts = -v --tb=short
+
+# Markers
+markers =
+    slow: marca testes lentos
+    integration: marca testes de integração
+    unit: marca testes unitários
+
+# Timeout para testes de UI (evita travamentos)
+qt_wait_signal_timeout = 5000
+
 filterwarnings =
     ignore::DeprecationWarning
     ignore::PendingDeprecationWarning
