--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 # GUI Framework
 PyQt6>=6.6.0
 PyQt6-QScintilla>=2.14.0
+PyQt6-WebEngine>=6.6.0
 QtAwesome>=1.3.0
+monaco-qt>=0.1.0
 
 # Database Drivers
 sqlalchemy>=2.0.0
