refactor: reorganiza estrutura do projeto
- Move código-fonte para source/
- Move scripts (.bat, .spec) para scripts/
- Move exemplos para docs/examples/
- Move testes soltos para tests/
- Remove arquivos de debug/lixo (playground.py, debug_columns.py, etc)
- Adiciona README.md profissional com logo
- Atualiza .gitignore com novas entradas
- Atualiza pytest.ini com pythonpath
- Limpa requirements.txt (remove pacotes problemáticos)
- Corrige test_install.py para usar pytest-qt

Arquivos deletados:
- debug_columns.py, playground.py, quick_test.py
- IMPLEMENTACAO_COMPLETA.py, WELCOME.txt, TESTE.dpw
- .coverage, datapyn.log

Nova estrutura:
datapyn/
 source/     (código-fonte)
 scripts/    (automação)
 docs/       (documentação)
 tests/      (testes)
 README.md   (com logo SVG)

--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,12 @@ __pycache__/
 *.so
 .Python
 venv/
+.venv/
 env/
 ENV/
 build/
-develop-eggs/
 dist/
+develop-eggs/
 downloads/
 eggs/
 .eggs/
@@ -41,3 +42,11 @@ config/local.json
 # OS
 .DS_Store
 Thumbs.db
+
+# Testing
+.coverage
+htmlcov/
+.pytest_cache/
+
+# DataPyn workspace files
+*.dpw
