--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ PyQt6>=6.6.0
 PyQt6-QScintilla>=2.14.0
 PyQt6-WebEngine>=6.6.0
 QtAwesome>=1.3.0
-monaco-qt>=0.1.0
+qt-material>=2.14
 
 # Database Drivers
 sqlalchemy>=2.0.0
@@ -12,15 +12,11 @@ pyodbc>=5.0.0
 mysql-connector-python>=8.0.0
 PyMySQL>=1.1.0
 psycopg2-binary>=2.9.0
-mariadb>=1.1.0
 
 # Data Processing
 pandas>=2.0.0
 numpy>=1.24.0
 openpyxl>=3.1.0
-
-# Windows Notifications
-windows-toasts>=1.3.0
 
 # Utilities
 python-dotenv>=1.0.0
@@ -30,3 +26,5 @@ keyring>=24.0.0
 # Testing
 pytest>=8.0.0
 pytest-cov>=4.0.0
+pytest-qt>=4.5.0
+pytest-subtests>=0.13.0
