feat: Centralizar execução Python e corrigir persistência de namespace
- Centralizado toda execução Python no PythonWorker principal
- Removido workers duplicados (PythonExecutionWorker, SessionPythonWorker)
- Implementado persistência correta do namespace entre execuções
- Variáveis definidas em Python agora persistem na memória
- Execução híbrida: exec() para statements + eval() para última expressão
- Melhorado tema do editor (Monokai) independente do tema da aplicação
- Corrigido problema onde df2=df[filtro] não ficava disponível em execuções seguintes

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ pyodbc>=5.0.0
 mysql-connector-python>=8.0.0
 PyMySQL>=1.1.0
 psycopg2-binary>=2.9.0
+mariadb>=1.1.0
 
 # Data Processing
 pandas>=2.0.0
