--- a/pytest.ini
+++ b/pytest.ini
@@ -6,6 +6,10 @@ python_classes = Test*
 python_functions = test_*
 addopts = -v --tb=short
 
+# Environment variables
+env = 
+    QT_QPA_PLATFORM=offscreen
+
 # Markers
 markers =
     slow: marca testes lentos
